Group recommendations visible even without text now. Also fixed visibility when inline posting new recommendation without text. Closes #2

--- a/voteit/groups/static/group_proposals.css
+++ b/voteit/groups/static/group_proposals.css
@@ -46,6 +46,7 @@
     margin-top: 20px;
 }
 #group-proposals .other_groups_recommendations {
+    margin-top: 10px;
     border-top: 1px solid #ccc;
 }
 #selectable-hashtags {
